# AI-investment

./: .gitignore  README.md  START_HERE.md  audit_daily.py  pyproject.toml  run_daily.py  serve.py  初始化环境.command  启动AI投研.command
configs/: data_sources.json  delivery.json  model_config.json  positions.csv  strategy_params.json  universe_etf.json
docs/: AGENTS.md  ARCHITECTURE.md  CHAT_AGENT_RUNTIME.md  CLIENT_PRODUCT_GUIDE.md  CONVERTIBLE_BOND_MODEL.md  CURRENT_SYSTEM.md  DASHBOARD_SCHEMA.md  DATA_CONTRACT.md  DATA_QUALITY_RULES.md  DELIVERY_HARDENING.md  ETF_MODEL.md  FRONTEND_GUIDE.md  PROJECT_STRUCTURE.md  RELEASE_NOTES_2026-07-15.md  RELEASE_NOTES_2026-07-16.md  RELEASE_NOTES_2026-07-17.md  REPORTING_POLICY.md  STABILITY_CHECKLIST.md  STRATEGY_LOGIC.md  STRATEGY_PARAMETERS.md  TL_MODEL.md
frontend/: index.html
logs/: .gitkeep
outputs/: .gitkeep
templates/: Wind公式填报模板-AI投研系统-客户版.xlsx  Wind公式填报模板-AI投研系统-极简客户版.xlsx  Wind数据模板-AI投研系统-客户交付版.xlsx  Wind数据模板-AI投研系统.xlsx
tests/: smoke.py  test_atomic_refresh_publish.py  test_cb_linkage_overlay.py  test_cb_ranking_output.py  test_cb_strategy_config.py  test_chat_agent_runtime.py  test_chat_architecture_v2.py  test_chat_convertible_detail.py  test_chat_etf_detail.py  test_chat_stability_matrix.py  test_chat_tl_detail.py  test_chat_trace_atomic.py  test_commercial_components.py  test_dashboard_schema.py  test_data_quality.py  test_db_ingest.py  test_documentation_current.py  test_etf_config.py  test_etf_db_payload.py  test_etf_historical_diagnostics.py  test_etf_indicators.py  test_etf_legacy_characterization.py  (+21 more)
(+134 files in other folders)
