[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-superpower"
version = "0.1.0"
description = "Multi-agent AI research system for ETF, TL, and convertible bond daily workflows."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "openpyxl",
  "reportlab"
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["superpower*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
